# ivanos

./: Cargo.toml  x86_64-ivanos.json
.cargo/: config.toml
src/: allocator.rs  crt.rs  main.rs
