[package]
name = "ivanos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.9.0"

# [dependencies.wasm3]
# version = "0.3.1"
# git = "https://github.com/itowlson/wasm3-rs"
# branch = "ivanos"
# path = "/home/ivan/github/wasm3-rs"
# default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
